Revision history for {{$dist->name}}

{{$NEXT}}

0.08      2021-10-14 10:59:35 -0600
  - Fix typo which caused confusing diagnostic when an invalid
    key is passed into the constructor (gh#12, gh#13)

0.07      2021-07-04 13:54:24 -0600
  - Documentation changes only.

0.06      2021-07-02 05:15:09 -0600
  - Remove dependency on File::HomeDir (gh#7)
  - Fix tests on Windows (gh#5, gh#7)
  - Add data_dirs_list and config_dirs_list methods (gh#8, gh#9)

0.05      2021-07-01 14:29:45 -0600
  - Added Changes file for future changes
  - New maintainer

0.04_001       2014-10-08
  - Removed retroactively experimental Perl features
    to avoid warnings (rt#100798)