@@ -49,6 +49,20 @@ Takes the following named arguments:
 
     Name of the application for which File::XDG is being used.
 
+- api
+
+    The API version to use.
+
+    - api = 0
+
+        The default and original API version.
+
+    - api = 1
+
+        Currently experimental API version.  This will issue a warning when invoked
+        until version `1.00` is released.  At this point the version 1 API will
+        be stable.
+
 # METHODS
 
 ## data\_home
@@ -122,6 +136,7 @@ Returns the system config directories as a list of [Path::Class](https://metacpa
 ## lookup\_data\_file
 
 ```perl
+# api = 0
 my $path = $xdg->lookup_data_file($subdir, $filename);
 ```
 
@@ -130,9 +145,21 @@ directories indicated by `$XDG_DATA_HOME` and `$XDG_DATA_DIRS`. If an environmen
 variable is either not set or empty, its default value as defined by the
 specification is used instead. Returns a [Path::Class](https://metacpan.org/pod/Path::Class) object.
 
+```perl
+# api = 1
+my $path = $xdg->lookup_data_File($filename);
+```
+
+Looks up the data file by searching for `./$name/$filename` (where `$name` is
+provided by the constructor) relative to all base directories indicated by
+`$XDG_DATA_HOME` and `$XDG_DATA_DIRS`. If an environment variable is either
+not set or empty, its default value as defined by the specification is used
+instead. Returns a [Path::Class](https://metacpan.org/pod/Path::Class) object.
+
 ## lookup\_config\_file
 
 ```perl
+# api = 0
 my $path = $xdg->lookup_config_file($subdir, $filename);
 ```
 
@@ -140,6 +167,17 @@ Looks up the configuration file by searching for `./$subdir/$filename` relative 
 all base directories indicated by `$XDG_CONFIG_HOME` and `$XDG_CONFIG_DIRS`. If an
 environment variable is either not set or empty, its default value as defined
 by the specification is used instead. Returns a [Path::Class](https://metacpan.org/pod/Path::Class) object.
+
+```perl
+# api = 1
+my $path = $xdg->lookup_config_file($filename);
+```
+
+Looks up the configuration file by searching for `./$name/$filename` (where `$name` is
+provided by the constructor) relative to all base directories indicated by
+`$XDG_CONFIG_HOME` and `$XDG_CONFIG_DIRS`. If an environment variable is
+either not set or empty, its default value as defined by the specification
+is used instead. Returns a [Path::Class](https://metacpan.org/pod/Path::Class) object.
 
 # SEE ALSO
 
