@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - New experimental API (api => 1)
+    - lookup_config_file and lookup_data_file will use the name passed
+      to the constructor, rather than passed to the method (gh#14, gh#17)
+    - Experimental API will issue a warning, until it becomes stable
+      (on the release of 1.00) (gh#17)
 
 0.08      2021-10-14 10:59:35 -0600
   - Fix typo which caused confusing diagnostic when an invalid
